Fix modal listeners executing for every server